Fixes layout issues when Narrative does not have a title or body

--- a/less/audio.less
+++ b/less/audio.less
@@ -16,6 +16,12 @@
     }
 }
 
+.is-audio {
+  .component-widget {
+    clear: both;
+  }
+}
+
 .audio-inner {
     .top-left,
     .bottom-left {
